fix accordians on mobile

--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -514,12 +514,16 @@
 }
 
 .image-with-text__accordians {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  position: relative;
   width: 100%;
   padding-right: 0;
-  padding-left: 7rem;
+  padding-left: 0rem;
+  @media screen and (min-width: 750px) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-left: 7rem;
+  }
 }
 
 .image-with-text__grid--reverse .image-with-text__accordians {
